# zevdocs

./: .gitignore  CMakeLists.txt  CNAME  Makefile.am  README  configure.ac  docsets.md  index.md  meson.build  meson_options.txt  snapcraft.yaml  zevdocs.doap
_data/: docsets.yml  docsets_usercontributed.yml  weekly_downloads.yml
_includes/: badges.html  footer.html  header.html
_layouts/: default.html  docsets.html
cmake/: FindVala.cmake
data/: Makefile.am  io.github.jkozera.ZevDocs.appdata.xml.in  io.github.jkozera.ZevDocs.desktop.in  io.github.jkozera.ZevDocs.desktop.snap.in  io.github.jkozera.ZevDocs.gschema.xml  io.github.jkozera.ZevDocs.gschema.xml.in  io.github.jkozera.ZevDocs.service.in  meson.build  org.gnome.Devhelp.service.in  org.gnome.libdevhelp.gschema.xml.in
data/icons/: LICENSE  Makefile.am  meson.build
devhelp/: Makefile.am  devhelp.h  dh-assistant-view.c  dh-book-list-builder.c  dh-book-list-builder.h  dh-book-list-directory.c  dh-book-list-directory.h  dh-book-list.c  dh-book-list.h  dh-book-manager.c  dh-book-manager.h  dh-book-tree-model.c  dh-book-tree-model.h  dh-book-tree.c  dh-book-tree.h  dh-book.c  dh-book.h  dh-groupdialog.ui  dh-groupdialog.vala  dh-keyword-model.c  dh-keyword-model.h  dh-lib.gresource.xml  dh-link.c  dh-link.h  dh-notebook.c  dh-profile-builder.c  dh-profile-builder.h  dh-profile-chooser.vala  dh-profile.c  dh-profile.h  dh-search-context.c  dh-search-context.h  dh-settings-builder.c  dh-settings.c  dh-settings.h  dh-sidebar.c  dh-util-lib.c  dh-util-lib.h  dh-web-view.c  meson.build
flatpak/: 1-build.sh  2-add-remote.sh  3-install-app.sh  4-run-app.sh  io.github.jkozera.ZevDocs.json  org.gnome.Devhelp.json
po/: POTFILES.in
snap/plugins/: x-dep.py
src/: Makefile.am  dh-app.c  dh-assistant.ui  dh-main.c  dh-preferences.c  dh-preferences.ui  dh-settings-app.c  dh-util-app.h  dh-window.c  dh-window.ui  meson.build
static/css/: mastodon.widget.css  styles.css
static/js/: icons.js  mastodon.widget.js
unit-tests/: Makefile.am
